# Promise

./: README.md  promise  pyproject.toml
docs/: promise-language.md  promise-standard.md
examples/core/: promise-tooling-core.promise  task-core.promise
examples/go/task/: Makefile  README.md  go.mod  task_contract_test.go
examples/go/task/default/: constraints.go  types.go
examples/go/task/mapped/: transitions.go  types.go
examples/task/: field.promise.md  function.promise.md  go-type-map.json  promise.spec.json  verification.promise.md
schemas/: promise-spec.schema.json
skills/promise/: SKILL.md
skills/promise-authoring/: SKILL.md
skills/promise-authoring/agents/: openai.yaml
skills/promise-authoring/references/: promise-architecture.md  promise-core.md  promise-language.md  promise-standard.md  promise-tooling-readme.md  task-example.system.promise.md
skills/promise-authoring/scripts/: promise
skills/promise-authoring/scripts/promise_cli/: __main__.py  dsl.py
skills/promise/agents/: openai.yaml
skills/promise/references/: promise-architecture.md  promise-cli.promise  promise-core.md  promise-language.md  promise-standard.md  promise-tooling-readme.md  task-example.promise  task-example.spec.json
skills/promise/scripts/promise_cli/: __init__.py  cli.py  dsl.py
src/promise_cli/: cli.py  dsl.py
templates/: field.promise.md  function.promise.md  system.promise.md  verification.promise.md
tests/: test_promise_cli.py
tooling/: promise-cli.promise
